nginx-ingress.yml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: selenium-grid
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - zai-dan-selenium.com
  rules:
  - host: zai-dan-selenium.com
    http:
      paths:
      - path: /
        backend:
          serviceName: selenium-hub
          servicePort: 4444
